<?xml version="1.0" encoding="utf-8"?>
<!--Muhammad Saad , n01366618, Section RNA-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/muhammad_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/muhammad_download"
        android:title="@string/download"
        android:icon="@drawable/ic_download"/>

    <item
        android:id="@+id/muhammad_weather"
        android:title="@string/weather"
        android:icon="@drawable/ic_weather"/>

    <item
        android:id="@+id/muhammad_filecontent"
        android:title="@string/filecontent"
        android:icon="@drawable/ic_file"/>

    <item
        android:id="@+id/muhammad_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings_tab"/>

    <item
        android:id="@+id/muhammad_shape"
        android:title="@string/shape"
        android:icon="@drawable/ic_shape_tab"/>


</menu>